agregue der y mer

--- a/pantallaprincipal isaiasramos/pantallas/foro.html
+++ b/pantallaprincipal isaiasramos/pantallas/foro.html
@@ -32,7 +32,7 @@
                             <a class="nav-link active" aria-current="page" href="index.html">INICIO</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="registro.html">REGISTRARSE</a>
+                            <a class="nav-link" href="registroAle.html">REGISTRARSE</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="materias.html">MATERIAS</a>
