--- a/paginas unidas/html/inicioIsaias.html
+++ b/paginas unidas/html/inicioIsaias.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="es">
 
 <head>
@@ -18,34 +17,43 @@
 </head>
 
 <body>
-    <header>
-        <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #3864f3;">
+
+     <!--CABECERA EMPIEZA-->
+     <header class="cabecera">
+        <nav class="navbar navbar-expand-lg bg-light px-4">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">ESTUDIO COLABORATIVO</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
+                <a class="navbar-brand" href="#">Estudio Colaborativo</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="inicio.html">INICIO</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="registroAle.html">REGISTRARSE</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="materias.html">MATERIAS</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="foroCande.html">FORO</a>
-                        </li>
-
-
-                    </ul>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#  ">Inicio</a>
+                    </li>       
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Quienes somos?</a>
+                    </li>                                          
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="registroAle.html">Registrarse</a>
+                    </li> 
+                    <li class="nav-item">
+                        <a class="nav-link" href="inicioSesionAgusClara.html">Ingresar
+                            <i class="fa-solid fa-arrow-right-to-bracket"></i>
+                        </a>
+                    </li>                        
+                </ul>
+                <p style = "color: red; ">Usuario NO logueado</p>
+                <form class="d-flex" role="search">
+                    <input class="form-control me-2" type="search" placeholder="Buscar en el foro" aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit">Buscar</button>
+                </form>
                 </div>
             </div>
-        </nav>
+            </nav>
+    </header>
+    <!--CABECERA termina-->
+
 
         <section class="texto_header">
             <div class="contenedor-bienvenidos">
@@ -66,11 +74,6 @@
             </div>
 
         </section>
-
-
-
-        
-    </header>
 
     <main>
         <section class="contenedor principal">
